[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main.gd" type="Script" id=2]
[ext_resource path="res://src/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sfx/game-over.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/house-in-a-forest.ogg" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.27451, 0.435294, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="SFX" type="Node" parent="."]

[node name="BGMusic" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )

[node name="GameOverSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 5 )

[node name="Timers" type="Node" parent="."]

[node name="StartTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="MobTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="Timers"]

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLoc" type="PathFollow2D" parent="MobPath"]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="PlayerStartPos" type="Position2D" parent="."]
position = Vector2( 240, 450 )
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="timeout" from="Timers/StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="Timers/MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="Timers/ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
